--- a/next-pre-rendering/package.json
+++ b/next-pre-rendering/package.json
@@ -13,6 +13,7 @@
     "json-server": "^0.17.2",
     "next": "13.1.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.0.4"
   }
 }
